--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script
+    src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
+    data-auto-a11y="true"
+  ></script>
     <link rel="stylesheet" href="style.css">
     <title>Rajashree Mohanty 🏳️‍🌈</title>
 </head>
@@ -12,8 +16,12 @@
         <header id="top">
             <div class="logo"><h1>L O G O</h1></div>
             <nav>
+                <input type="checkbox" id="click">
+                <label for="click" class="menu-btn">
+                    <i class="fas fa-bars"></i>
+                </label>
                 <ul class="links">
-                    <li><a href="#">Home</a>
+                    <li><a class="active" href="#">Home</a>
                     <li><a href="#">Works</a></li>
                     <li><a href="#">Location</a></li>
                 </ul>
